--- a/index.html
+++ b/index.html
@@ -4,6 +4,10 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
+    <link rel=”preconnect” href=”https://fonts.googleapis.com”>
+    <link rel=”preconnect” href=”https://fonts.gstatic.com” crossorigin>
+    <link href=”https://fonts.googleapis.com/
+css2?family=Poppins:wght@300;400;500;700&display=swap” rel=”stylesheet”>
     <link rel="stylesheet" href="style/resetstyle.css">
     <link rel="stylesheet" href="style/estilo.css">
 </head>
@@ -12,7 +16,7 @@
         <div class="conteiner">
             <input type=”checkbox” id=”menu” class=”container__botao”>
             <label for=”menu”>
-                <span class=”cabeçalho__menu hamburguer container__imagem”></span>
+                <span class=”cabeçalho__menu” hamburguer container__imagem”></span>
             </label>
          <ul class=”lista-menu”>
              <li class=”lista-menu__titulo”>Categorias</li>
